# Bloom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build-dependencies.sh  configure.sh  imgui.ini - backup of style colors  install-develop.sh  premake5.lua
bloom/: CMakeLists.txt  SourceFiles.cmake  premake5.lua  tests.lua
bloom/script/: lib.sc
bloom/src/Bloom/: Application.h  Application.hpp  Core.h  Core.hpp  GPU.h  GPU.hpp
bloom/src/Bloom/Application/: Application.cpp  Application.h  Application.hpp  Commands.hpp  CoreSystem.h  CoreSystem.hpp  CoreSystemManager.cpp  CoreSystemManager.h  CoreSystemManager.hpp  Input.cpp  Input.h  Input.hpp  InputEvent.cpp  InputEvent.h  InputEvent.hpp  InputInternal.h  MessageSystem.cpp  MessageSystem.h  MessageSystem.hpp  ResourceUtil.cpp  ResourceUtil.h  ResourceUtil.hpp  Window.cpp  Window.h  Window.hpp  WindowDelegate.cpp  WindowDelegate.h  WindowDelegate.hpp
bloom/src/Bloom/Asset/: Asset.cpp  Asset.h  Asset.hpp  AssetFileHeader.h  AssetFileHeader.hpp  AssetHandle.cpp  AssetHandle.h  AssetHandle.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  Assets.def  Fwd.cpp  Fwd.h  Fwd.hpp  MeshImport.cpp  MeshImport.h  MeshImport.hpp  MeshImporter.cpp  MeshImporter.hpp  Serialization.h  Serialization.hpp
bloom/src/Bloom/Core/: Autorelease.h  Autorelease.hpp  Base.h  Base.hpp  Core.h  Core.hpp  Debug.cpp  Debug.h  Debug.hpp  Dyncast.h  Dyncast.hpp  EnumCount.h  EnumCount.hpp  Profile.cpp  Profile.h  Profile.hpp  Reference.h  Reference.hpp  Serialize.cpp  Serialize.h  Serialize.hpp  Time.cpp  Time.h  Time.hpp  Yaml.h  Yaml.hpp
bloom/src/Bloom/GPU/: BlitContext.h  BlitContext.hpp  CommandQueue.h  CommandQueue.hpp  ComputeContext.h  ComputeContext.hpp  EncoderThread.cpp  EncoderThread.hpp  HardwareDevice.cpp  HardwareDevice.h  HardwareDevice.hpp  HardwarePrimitives.h  HardwarePrimitives.hpp  HardwareResourceHandle.h  HardwareResourceHandle.hpp  RenderContext.h  RenderContext.hpp  Swapchain.h  Swapchain.hpp
bloom/src/Bloom/Graphics/: Camera.cpp  Camera.h  Camera.hpp  Lights.cpp  Lights.h  Lights.hpp  MaterialInstance.hpp  MaterialProperties.h  MaterialProperties.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Renderer-depr.cpp  Renderer-depr.hpp-  Renderer.h  Renderer.hpp  ShaderBase.h  ShaderBase.hpp  StaticMesh.cpp  StaticMesh.h  StaticMesh.hpp  Texture.cpp  Texture.hpp  Vertex.h  Vertex.hpp
bloom/src/Bloom/Graphics/Material/: Material.cpp  Material.h  Material.hpp  MaterialInstance.cpp  MaterialInstance.h  MaterialInstance.hpp  MaterialParameters.h  MaterialParameters.hpp
bloom/src/Bloom/Graphics/Renderer/: BloomFramebuffer.h  (+18 more)
bloom/src/Bloom/Runtime/: CoreRuntime.cpp  CoreRuntime.h  CoreRuntime.hpp  SceneSystem.cpp  SceneSystem.h  SceneSystem.hpp  ScriptBindings.cpp  ScriptBindings.h  ScriptSystem.cpp  ScriptSystem.h  ScriptSystem.hpp
bloom/src/Bloom/Scene/: Entity.cpp  Entity.h  Entity.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneCamera.cpp  SceneCamera.h  SceneCamera.hpp  SceneEvents.h  SceneRenderer-depr.cpp-  SceneRenderer-depr.hpp-
bloom/src/Bloom/Script/: Script.cpp  Script.hpp
bloom/src/Bloom/ScriptEngine/: ScriptEngine.cpp  ScriptEngine.hpp
bloom/test/: HardwareResourceHandle.t.cpp  RuntimeSystem.t.cpp
bloom/tests/: RuntimeSystem.t.cpp
poppy/: CMakeLists.txt  SourceFiles.cmake  premake5.lua
poppy/resource/Icons/: FileIconsConfig.json  IconsConfig.json
poppy/resource/Platform/macOS/: MainMenu.storyboard
poppy/src/Poppy/Core/: Common.h  Common.hpp  Debug.cc  Debug.cpp  Debug.h  Debug.hpp  Profile.cpp  Profile.h  Profile.hpp
poppy/src/Poppy/Editor/: Application.txt  Editor.cpp  Editor.h  Editor.hpp  EditorSceneRenderer-depr.cpp-  EditorSceneRenderer-depr.hpp-  EditorWindowDelegate.cpp  EditorWindowDelegate.h  EditorWindowDelegate.hpp  SelectionContext.cpp  SelectionContext.h  SelectionContext.hpp
poppy/src/Poppy/Renderer/: EditorDrawData.h  EditorDrawData.hpp  EditorRenderer.cpp  EditorRenderer.h  EditorRenderer.hpp  EditorSceneRenderer.cpp  EditorSceneRenderer.h  EditorSceneRenderer.hpp
poppy/src/Poppy/Shaders/: BloomShader.h  BloomShader.metal  Lights.h  Lights.metal  OutlinePass.metal  PBRShader.h  PCSSTest.metal  PostProcess.h  PostProcess.metal  ShadowPassShader.metal  editorPasses.metal  mainPass.metal
poppy/src/Poppy/UI/: Appearance.cpp  Appearance.h  Appearance.hpp  DirectoryView.cpp  DirectoryView.hpp  Dockspace.cpp  Dockspace.h  Dockspace.hpp  FilesystemHistory.cpp  FilesystemHistory.hpp  Font.cpp  Font.h  Font.hpp  Icons.cpp  Icons.h  Icons.hpp  ImGuiContext.cpp  ImGuiContext.h  ImGuiContext.hpp  ImGuiHelpers.cpp  ImGuiHelpers.h  ImGuiHelpers.hpp  PropertiesView.cpp  PropertiesView.h  PropertiesView.hpp  SystemAppearance.h  SystemAppearance.hpp  Toolbar.cpp  Toolbar.h  Toolbar.hpp  View.cpp  View.h  View.hpp
(+363 files in other folders)
